Refactoring: removed warnings & dead code, documentation, readibility